# tap-db2

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  docker-compose.yml  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
tap_db2/: __init__.py  client.py  connector.py  stream.py  tap.py
tests/: __init__.py  conftest.py  test_core.py
tests/data/: catalog.json
