[tool.poetry]
name = "tap-ibm-db2"
version = "0.0.0"
description = "`Tap-DB2` is a Singer tap for IBM DB2 data sources."
authors = ["Daniel Purtov"]
license = "MIT"
readme = "README.md"
homepage = "https://meltano.com"
repository = "https://github.com/danielptv/tap-db2"
documentation = "https://github.com/danielptv/tap-db2/blob/main/README.md"
keywords = [
    "DB2",
    "IBM DB2",
    "ELT",
    "Meltano",
    "Meltano SDK"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "tap_db2" },
]

[tool.poetry.dependencies]
python = ">=3.9"
singer-sdk = "0.43.0"
ibm-db-sa = "0.4.1"
sqlalchemy = "2.0.36"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
faker = "33.1.0"
tox = "4.23.2"
mypy = "1.13.0"
ruff = "0.8.2"
types-sqlalchemy = "1.4.53.38"
types-jsonschema = "4.23.0.20240813"

[tool.mypy]
exclude = "tests"

[build-system]
requires = ["poetry-core==1.8.1", "poetry-dynamic-versioning==1.2.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
# CLI declaration
tap-db2 = 'tap_db2.tap:TapDB2.cli'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
  "F",    # Pyflakes
  "W",    # pycodestyle warnings
  "E",    # pycodestyle errors
  "FA",   # flake8-future-annotations
  "I",    # isort
  "N",    # pep8-naming
  "D",    # pydocsyle
  "UP",   # pyupgrade
  "ICN",  # flake8-import-conventions
  "RET",  # flake8-return
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "PL",   # Pylint
  "PERF", # Perflint
  "RUF",  # ruff
]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["sqlalchemy"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
sqlalchemy = "sa"

[tool.ruff.lint.pydocstyle]
convention = "google"
